--- a/app/assets/stylesheets/layout/_index.scss
+++ b/app/assets/stylesheets/layout/_index.scss
@@ -1,5 +1,5 @@
-@import "base";
-@import "utilities";
-@import "footer";
-@import "navbar";
-@import "sidebar";
+// @import "base";
+// @import "utilities";
+// @import "footer";
+// @import "navbar";
+// @import "sidebar";
