add views index and show link back shit style

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,4 +6,5 @@
   <li><%= resto.phone_number %></li>
   <li><%= resto.address%></li>
 </ul>
+<%= link_to 'Details', restaurant_path(resto)%>
 <% end %>
