bug fix on index view

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= @restaurant.each do |resto| %>
+<% @restaurant.each do |resto| %>
 <h2><%= resto.name%></h2>
 <h3><%= resto.category %></h3>
 <ul>
