--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,3 +7,12 @@
 </ul>
 
 <% end %>
+
+
+<div class="wrapper">
+  <div class="container">
+    <div class="row">
+      
+    </div>
+  </div>
+</div>
