--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,7 +1,7 @@
 
 <%= simple_form_for @restaurant do |f| %>
   <%= f.input :name %>
-  <%= f.input :category %>
+  <%= f.input :category, collection: ['chinese', 'italian', 'japanese', 'french', 'belgian'] %>
   <%= f.input :phone_number %>
   <%= f.input :address %>
   <%= f.button :submit %>
