--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,10 @@
 
 <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content%>
-  <%= f.input :rating%>
+  <%= f.input :rating, collection: 1..5, as: :radio_buttons, :class => 'inline_label' %>
   <%= f.button :submit%>
 <% end %>
+
+
+input_html: { class: 'special' }
+html: { class: 'form-inline' }
